<resources>
    <string name="app_name">AWorldAction</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="next">Next ></string>
    <string name="login_user_hint" translatable="false">E-Mail</string>
    <string name="login_password_hint" translatable="false">Password</string>
    <string name="pass_recovery_link"><u>Password recovery</u></string>
    <string name="new_account_link"><u>Create new account</u></string>
    <string name="register_step_1">Insert your account data</string>
    <string name="register_user_hint" translatable="false">Username</string>
    <string name="register_email_hint" translatable="false">E-Mail</string>
    <string name="login_link"><u>I have already an account</u></string>
    <string name="register_step_2">Create a safe password</string>
    <string name="confirm_passsword_hint">Confirm password</string>
    <string name="upload_profile_photo">Upload a profile picture</string>
    <string name="password_cofirm_hint">Password Confirm</string>
    <string name="list_inprogress">In progress</string>
    <string name="list_favourites">Favourites</string>
    <string name="list_completed">Completed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="detail_btn">More info</string>
    <string name="list_empty">No campaigns found</string>
    <string name="logout_btn" translatable="false">Logout</string>
    <string name="account">Your Account</string>
    <string name="detail_title">Details</string>
    <string name="login_failed">Invalid username or password</string>
    <string name="registration_failed">Registration failed</string>
    <string name="contributor_list">Contributors</string>
    <string name="campaign_completed">Completed</string>
    <string name="campaign_inprogress">In progress</string>
    <string name="create_campaign">Create campaign</string>
    <string name="campaign_title">Campaign title</string>
    <string name="campaign_caption">Campaign caption</string>
    <string name="campaign_submit">Submit campaign</string>
    <string name="new_campaign">New campaign</string>
    <string name="campaign_location" translatable="false">Location</string>
    <string name="waiting_locatoin">Waiting for location</string>
    <string name="unknown_locality">Unknown locality</string>
    <string name="upload">Upload</string>
    <string name="picker_gallery">Select picture</string>
    <string name="upload_failed">Upload failed</string>
    <string name="profile_pict">Profile picture</string>
    <string name="picker_camera">Take a photo</string>
    <string name="remove_picture">Delete picture</string>
    <string name="new_campaign_picture">New campaign picture</string>
    <string name="picture_caption">Picture caption</string>
    <string name="picture_submit">Post picture</string>
    <string name="no_pictures">No pictures yet</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current password</string>
    <string name="role_admin">Admin</string>
    <string name="role_user">User</string>
    <string name="insert_comment">Insert comment</string>
    <string name="edited">Edited</string>
    <string name="delete_comment">Delete comment</string>
    <string name="delete_comment_confirm">Your comment can not be restored</string>
    <string name="confirm_btn">Confirm</string>
    <string name="cancel_btn">Cancel</string>
    <string name="comment_list">Comments</string>
    <string name="delete_picture">Delete picture</string>
    <string name="delete_picture_confirm">Picture can not be restored</string>
    <string name="logout_confirm">You will be logged out</string>
    <string name="server_error">Unable to reach the server</string>
    <string name="retry_btn">Retry</string>
    <string name="locality">Locality</string>
</resources>