<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewTitleArea"
        style="@style/view_title_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            style="@style/back_icon_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/view_title"
            android:text="@string/register_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/sub_head"
            android:text="@string/register_step_1"/>

        <EditText
            android:id="@+id/userField"
            style="@style/login_edittext_user"
            android:hint="@string/register_user_hint"/>

        <EditText
            android:id="@+id/emailField"
            style="@style/login_edittext_user"
            android:hint="@string/register_email_hint"/>

        <EditText
            android:id="@+id/passwordField"
            style="@style/login_edittext_password"
            android:hint="@string/login_password_hint"/>

        <EditText
            android:id="@+id/passwordConfirmField"
            style="@style/login_edittext_password"
            android:hint="@string/password_cofirm_hint"/>

        <Button
            android:id="@+id/registerBtn"
            style="@style/login_next_btn"
            android:text="@string/register_btn" />

        <TextView
            android:id="@+id/authStatus"
            style="@style/text_status"
            android:text="" />

        <TextView
            android:id="@+id/loginLink"
            style="@style/text_link"
            android:text="@string/login_link"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>