<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewTitleArea"
        style="@style/view_title_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            style="@style/back_icon_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/view_title"
            android:text="@string/login_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/userField"
            style="@style/login_edittext_user"
            android:hint="@string/login_user_hint"/>

        <EditText
            android:id="@+id/passwordField"
            style="@style/login_edittext_password"
            android:hint="@string/login_password_hint"/>

        <Button
            android:id="@+id/loginBtn"
            style="@style/login_next_btn"
            android:text="@string/login_btn" />

        <TextView
            android:id="@+id/passRecoveryLink"
            style="@style/text_link"
            android:text="@string/pass_recovery_link"/>
        <TextView
            android:id="@+id/newAccountLink"
            style="@style/text_link"
            android:text="@string/new_account_link"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>