<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UploadPhotoProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewTitleArea"
        style="@style/view_title_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            style="@style/back_icon_btn"
            android:contentDescription="@string/account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/view_title"
            android:text="@string/profile_pict"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTitleArea">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                style="@style/sub_head"
                android:layout_marginBottom="24dp"
                android:text="@string/upload_profile_photo" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pictureDisplay"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:background="@drawable/ic_baseline_account_circle_24"
                android:backgroundTint="@color/gray_600"/>

            <TextView
                android:id="@+id/statusDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/pickerBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:text="@string/picker_gallery" />

                <Button
                    android:id="@+id/deletePictureBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/danger"
                    android:text="@string/remove_picture" />
            </LinearLayout>

            <Button
                android:id="@+id/uploadBtn"
                style="@style/login_next_btn"
                android:text="@string/upload" />
        </LinearLayout>
    </ScrollView>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@android:style/Widget.Material.Light.ProgressBar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>